--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "testcontainers": "^11.11.0",
     "typescript": "^5.9.3",
     "unplugin-swc": "^1.5.9",
+    "vite-plugin-istanbul": "^7.2.1",
     "vitest": "^4.0.18"
   },
   "dependencies": {
