feat: Prometheus 메트릭 엔드포인트 추가
prom-client 기반 /metrics 엔드포인트를 추가하여 HTTP 요청 duration/count
histogram과 Node.js 기본 메트릭(메모리, GC, 이벤트루프)을 수집한다.
k8s deployment에 Prometheus scrape annotation을 추가하여 자동 수집을 지원한다.

--- a/.env.example
+++ b/.env.example
@@ -32,5 +32,9 @@ MAIL_VERIFICATION_URL=http://localhost:3000/api/v1/auth/verify-email
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
+# Metrics
+METRICS_ENABLED=true
+METRICS_PREFIX=nestjs_
+
 # Logging
 LOG_LEVEL=info
