--- a/k8s/base/deployment.yaml
+++ b/k8s/base/deployment.yaml
@@ -18,6 +18,10 @@ spec:
     metadata:
       labels:
         app: nestjs-starter
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "3000"
+        prometheus.io/path: "/metrics"
     spec:
       terminationGracePeriodSeconds: 30
       containers:
